Fix some mobile layout problems
Closes #406

--- a/_sass/layouts/guide.scss
+++ b/_sass/layouts/guide.scss
@@ -6,6 +6,12 @@ body.guides-configuration-reference {
     h1, h2, h3, h4, h5, h6, p, small, strong, em,
     table tr th, table tr td, li, i, dt, .title, .paragraph, .footnote {
       color: #0D1C2C;
+      @media only screen and (max-width: 768px) {
+        word-wrap: break-word;
+      }
+    }
+    .note, .colist {
+      overflow: auto;
     }
     a, .description-decoration, .description-decoration span{
       color: $link-light-bg;
@@ -16,9 +22,11 @@ body.guides-configuration-reference {
     .toc {
       float: right;
       width: 350px;
+      padding-right: 20px;
       margin-left: 20px;
       margin-bottom: 20px;
       background-color: $white;
+      word-wrap: break-word;
       ul {
         list-style: none;
       }
